--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 beautifulsoup4==4.7.1
 certifi==2018.11.29
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.1.5
 django-bootstrap4==0.0.7
 django-extensions==2.1.4
+django-heroku==0.3.1
+gunicorn==19.9.0
 idna==2.8
+psycopg2==2.7.7
 pytz==2018.9
 requests==2.21.0
 selenium==3.141.0
 six==1.12.0
 soupsieve==1.7.3
 urllib3==1.24.1
+whitenoise==4.1.2
